实现产生中间变量的名字

--- a/code/compile_auas.cbp
+++ b/code/compile_auas.cbp
@@ -35,6 +35,8 @@
 		<Unit filename="block.cpp" />
 		<Unit filename="block.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="midCode.cpp" />
+		<Unit filename="midCode.h" />
 		<Unit filename="syntax.cpp" />
 		<Unit filename="syntax.h" />
 		<Unit filename="tables.cpp" />
