完成部分中间代码
完成了表达式、有返回值的函数调用，赋值语句的中间代码生成，可以完成对于数组的操作

--- a/code/compile_auas.cbp
+++ b/code/compile_auas.cbp
@@ -32,6 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="add.h" />
 		<Unit filename="block.cpp" />
 		<Unit filename="block.h" />
 		<Unit filename="main.cpp" />
