--- a/code/compile_auas.cbp
+++ b/code/compile_auas.cbp
@@ -38,6 +38,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="midCode.cpp" />
 		<Unit filename="midCode.h" />
+		<Unit filename="mips.cpp" />
+		<Unit filename="mips.h" />
 		<Unit filename="syntax.cpp" />
 		<Unit filename="syntax.h" />
 		<Unit filename="tables.cpp" />
